--- a/frontend/popup.html
+++ b/frontend/popup.html
@@ -23,6 +23,16 @@
     <label for="databaseSelect">Escolha uma database:</label>
     <select id="databaseSelect"></select>
 
+    <label for="categoria">Categoria:</label>
+    <input list="categorias" id="categoria" />
+    <datalist id="categorias"></datalist>
+
+    <label for="tags">Tags (separadas por vírgula):</label>
+    <input type="text" id="tags" />
+
+    <label for="notas">Notas:</label>
+    <textarea id="notas"></textarea>
+
     <button id="clip" disabled>Salvar Página</button>
     <div id="status"></div>
 
